gccida/c0/lex_number
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1303:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1307:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1308:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1313:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // [rsp+50h] [rbp-1B0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1314:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // [rsp+58h] [rbp-1A8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1315:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // [rsp+60h] [rbp-1A0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1318:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // [rsp+78h] [rbp-188h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1319:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // [rsp+80h] [rbp-180h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1320:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // [rsp+88h] [rbp-178h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1348:12: error: expected expression
lex_number::anon1 floatflag; // [rsp+1BCh] [rbp-44h] 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1367:1: error: use of undeclared identifier 'floatflag'
floatflag = NOT_FLOAT; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1367:13: error: use of undeclared identifier 'NOT_FLOAT'
floatflag = NOT_FLOAT; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1384:28: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
else if ( *stra == 48 && ( sch_istable[*( ( unsigned __int8 *)stra + 1)] & 4) != 0 ) 
                           ^~~~~~~~~~~
                           _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1395:6: error: use of undeclared identifier 'floatflag'
if ( floatflag == AFTER_POINT ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1395:19: error: use of undeclared identifier 'AFTER_POINT'
if ( floatflag == AFTER_POINT ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1400:6: error: use of undeclared identifier 'floatflag'
if ( floatflag == AFTER_EXPON ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1400:19: error: use of undeclared identifier 'AFTER_EXPON'
if ( floatflag == AFTER_EXPON ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1405:1: error: use of undeclared identifier 'floatflag'
floatflag = AFTER_POINT; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/c-lex.c:1405:13: error: use of undeclared identifier 'AFTER_POINT'
floatflag = AFTER_POINT; 
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex_number/src/obj/c-lex.o] Error 1
